            * @ name: manduca_exclude_author_page
            * @ true : default : show authoer pages in sitemap
            * @ false : Do not use author pages
    
    commit #16.9.3
        12 September, 2016.
            Validator: 0 error, 0 warnings. CSS. 0 error 3 warnings (hypens and viewport)
            ==upload to repository as 16.9 ==
            -design fixings,
            - Last validator warnings fixed: Now no error, no warnings! 
            - search icon replaced with SVG background in css.
            - add #svg-layer to header.php and footer.php
            - style.css has 3 warnings in Komodo (hypens and  
            ==bug==
                -header image was smaller than than wrapper. custom-head.php now fixed.
                - fieldset should be set for browser compatibility.
                


version 16.10
    commit #16.10.1
        - 16 September, 2016
        ==bug==
            -widget searchform did not work because I rewrote id="ws".
        ==code optimazation==
            -add nav to breadcrumb
            -add id to top-bar
        ==sitemap developing==
            -not display PDF, if there is none.
            /* Boolean filter
            * @ name: manduca_exclude_author_page
            * @ true : default : show authoer pages in sitemap
            * @ false : Do not use author pages

    commit #16.10.2
        20 Sept ,2016
            ==bug==
                - Author page __ function did not work (I do not know why)
            Author page: add website to author.php
            design: some style fixed.  (excerpt, header search )
    
    commit #16.10.3
        28 Sept, 2016
        -add class to image anchor in order to avoid border-bottom (code: https://gist.github.com/rugor/5418051)
        -remove adjacent_image_link function added in commit#16.7.2. Reason: not work fine in somogyivakok.hu
        -remove image link Font-Awesome icons
        -add svg to single post navigation.             
        